--- a/sample/src/main/res/layout/menu_left_drawer.xml
+++ b/sample/src/main/res/layout/menu_left_drawer.xml
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="56dp" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="240dp"
         android:layout_height="wrap_content" />
