Library and project converted to Kotlin

--- a/sample/src/main/res/values/arrays.xml
+++ b/sample/src/main/res/values/arrays.xml
@@ -6,7 +6,7 @@
         <item>My Account</item>
         <item>Messages</item>
         <item>Cart</item>
-        <item />
+        <item></item>
         <item>Log Out</item>
     </string-array>
 
