Migrated to AndroidX

--- a/sample/src/main/res/layout/fragment_text.xml
+++ b/sample/src/main/res/layout/fragment_text.xml
@@ -10,6 +10,7 @@
         android:layout_gravity="center"
         android:fontFamily="sans-serif-light"
         android:clickable="true"
+        android:focusable="true"
         android:textColor="?android:textColorSecondary"
         android:textSize="36sp" />
 
